<resources>
    <string name="app_name">Wild Swimming</string>

    <string name="swimspotTitle">Welcome</string>
    <string name="swimspotlistTitle">Your Swimspots</string>
    <string name="swimspotSubtitle">Please Enter Swimspot Details</string>

    <string name="button_addSwimspot">Add Swimspot</string>
    <string name="hint_swimspotName">Name</string>
    <string name="hint_swimspotCounty">County </string>
    <string name="hint_swimspotCategorey">Categorey </string>
    <string name="menu_addSwimspot">Add</string>
    <string name="menu_cancelSwimspot">Cancel</string>
    <string name="enter_swimspot_details"> Please enter all Swimspot Details </string>
    <string name="input_length_exceeded"> Input Length Exceeded </string>
    <string name="text_input_only"> Text Input Only </string>
    <string name="save_swimspot"> Save Swimspot </string>
    <string name="button_addPhoto"> Add Photo </string>
    <string name="select_swimspot_photo">Select Photo</string>
    <string name="change_swimspot_photo">Change Photo</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteSwimspot">Delete</string>
    <string name="title_activity_swimspot_maps">Map of All Swimspots</string>

    <string name="action_swimspot">Add Swimspot</string>
    <string name="action_swimspotlist">Swimspot List</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">Wild Swimming</string>
    <string name="nav_header_subtitle">subtitle</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About</string>
    <string name="action_map">Map</string>
    <string name="action_gallery">Gallery</string>
    <string name="about_title">Wild Swimming: Organise &amp; manage Your Swims</string>
    <string name="about_message">What makes the perfect swim? It\'s all about the most magical locations (and how to protect them), finessing your kitbag, keeping yourself and others safe, and maybe discovering a nice place for a warm-up cuppa and cake. Whether you\'re a seasoned dipper or a fledgling, Wild Swimming is the ultimate tool to organise your swim spots. From the dramatic Atlantic bays to cascading waterfalls and secret pools, the rugged Causeway Coast to the secluded loughs of the Wicklow Mountains, manage your spectacular swim spots across all four regions of Ireland.</string>

    <string name="SwimspotsNotFound">No Swimspots Yet...\nGo Create a Swimspot</string>
    <string name="swimspotError">Error : Couldn\'t Create a Swimspot...</string>

    <string name="swimspotDetails">Swimspot Details</string>
    <string name="name">Update Name</string>
    <string name="county">Update County</string>
    <string name="categorey">Update Categorey</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>


</resources>