<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/swimspotFragment"
            android:icon="@drawable/baseline_water_24_blue"
            android:title="@string/action_swimspot" />
        <item
            android:id="@+id/swimspotListFragment"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/action_swimspotlist" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/action_about" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>